--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     top: 0;
     width: 100%;
     transition: all 0.4s;
+    z-index: 999999;
 }
 
 #main-nav.scrolled {
@@ -23,6 +24,20 @@ body {
     padding: 30px 20px;
     text-align: right;
     margin: 0;
+}
+
+#main-nav .mobile-nav,
+#main-nav #burger-checkbox {
+    display: none;
+}
+
+#main-nav .mobile-nav .hamburger-icon {
+    box-sizing: border-box;
+    padding: 15px 25px 10px 20px;
+    display: inline-block;
+    width: 100%;
+    text-align: right;
+    color: white;
 }
 
 #main-nav .nav-list .nav-list-item,
@@ -39,7 +54,7 @@ footer ul.footer-list .footer-list-item {
 }
 
 #main-nav .nav-list .nav-list-item a,
-footer ul.footer-list .footer-list-item a{
+footer ul.footer-list .footer-list-item a {
     color: white;
     text-decoration: none;
 }
@@ -109,6 +124,11 @@ section .section-pictures {
     flex-wrap: wrap;
 }
 
+section .section-pictures h3.person-name {
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
 /*team*/
 
 #team {
@@ -121,15 +141,9 @@ section .section-pictures {
     text-align: center;
 }
 
-
 #team .section-pictures .picture img {
     width: 100%;
     border-radius: 50%;
-}
-
-#team .section-pictures .picture h3 {
-    text-transform: uppercase;
-    margin-bottom: 0;
 }
 
 #team .section-pictures .picture p.job-title {
@@ -164,6 +178,98 @@ section .section-pictures {
 
 #skills {
     color: #43494C;
+}
+
+#skills .section-pictures .picture {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#skills .section-pictures .picture .circle {
+    margin: 0;
+}
+
+#skills .section-pictures .picture h3 {
+    width: 100%;
+}
+
+/*--------circles----------*/
+
+.blue {
+    background-color: skyblue;
+}
+
+.pink {
+    background-color: #D13E8C;
+}
+
+.green {
+    background-color: seagreen;
+}
+
+.orange {
+    background-color: orange;
+}
+
+.radial-progress {
+    background-color: #DEF3FF;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+}
+
+.radial-progress .circle .mask,
+.radial-progress .circle .mask .fill {
+    width: 120px;
+    height: 120px;
+    transition: transform 1s;
+    position: absolute;
+    backface-visibility: hidden;
+    border-radius: 50%;
+}
+
+.radial-progress .circle .mask {
+    clip: rect(0px, 120px, 120px, 60px);
+}
+
+.radial-progress .circle .mask .fill {
+    clip: rect(0px, 60px, 120px, 0px);
+}
+
+.radial-progress .inset {
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    margin-left: 15px;
+    margin-top: 15px;
+    background-color: #fbfbfb;
+    border-radius: 50%;
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+.radial-progress .inset .percentage {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: none;
+}
+
+.radial-progress .circle .shadow {
+    width: 120px;
+    height: 120px;
+    position: absolute;
+    box-shadow: inset;
+    border-radius: 50%;
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.2) inset;
 }
 
 /*reviews*/
@@ -258,7 +364,7 @@ section .section-pictures {
 
 footer {
     background-color: #303E87;
-    padding: 20px 100px;
+    padding: 30px 100px;
 }
 
 footer ul.footer-list {
@@ -271,4 +377,3 @@ footer ul.footer-list {
 footer ul.footer-list .footer-list-item a:hover {
     color: #29B8B8;
 }
-
